# pugaipadam

./: Cargo.toml
i18n/en/: cosmic_app_template.ftl  pugaipadam.ftl
res/: com.github.MrKomodoDragon.pugaipadam.desktop  com.github.MrKomodoDragon.pugaipadam.xml
src/: app.rs  main.rs
