[package]
name = "pugaipadam"
version = "0.1.0"
edition = "2021"

[dependencies]
i18n-embed-fl = "0.8"
image = "0.25.2"
once_cell = "1.19.0"
rust-embed = "8.3.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
rev = "0a1922d"
default-features = false
features = ["dbus-config", "tokio", "winit", "wgpu"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]
